index.html: Added paragraph on Web Development interest

--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
             <strong>Major</strong>: Computer Science <br>
             <strong>Graduation Year</strong>: 2025 <br>
         </p>
+        <p>
+            I'm interested in web development as web based applications have been apart of my day to day life for the better part of a decade. I decided to take this course as I was excited to learn about better design philosophies when it comes to web development. The course description also mentioned learning about the connections between web apps and databases, which I would like to further my knowledge on.
+        </p>
     </div>
     <hr>
     <div class="webGoals">
