index.html: Added image

--- a/index.html
+++ b/index.html
@@ -14,13 +14,15 @@
         h1 {
             color: darkgreen
         }
-        
+
     </style>
 </head>
 <body>
     <h1>The Lord of the Rings</h1>
 
     <p>LOTR is ana epic high-fantasy novel written by J.R.R. Tolkien.</p>
+
+    <img src="the-lord-of-the-rings.jpg"
 
     <p>"Even the smalled person can change the course of the future." - Galadriel</p>
     
