--- a/index.html
+++ b/index.html
@@ -14,6 +14,15 @@
         h1 {
             color: darkgreen
         }
+        img {
+            display: block;
+            margin: 20px auto;
+            max-width: 100%;
+            height: auto;
+        }
+        p{
+            line-height: 1.6;
+        }
 
     </style>
 </head>
@@ -22,7 +31,7 @@
 
     <p>LOTR is ana epic high-fantasy novel written by J.R.R. Tolkien.</p>
 
-    <img src="the-lord-of-the-rings.jpg"
+    <img src="the-lord-of-the-rings.jpg" alt="The Lord of the Rings">
 
     <p>"Even the smalled person can change the course of the future." - Galadriel</p>
     
