--- a/index.html
+++ b/index.html
@@ -3,9 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>External Style</title>
+    <link rel="stylesheet" href="styles.css"
 </head>
 <body>
-    
+    <h1> Welcome to External Styling </h1>
+    <p> This is an example of External styles </p>
+    <p> External styles allows you to define styles for document in on css file. </p>
 </body>
 </html>
