Assignment 2: Added Movie

--- a/Assignment_2/index.html
+++ b/Assignment_2/index.html
@@ -3,16 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>The Lord of the Rings</title>
+    <title>Blade Runner</title>
     <style>
         body {
             font-family: Arial, Helvetica, sans-serif;
-            background-color: rgb(238, 211, 175);
-            color: #333;
+            background-color: rgb(0, 0, 0);
+            color: red;
             margin: 20px;
         }
         h1 {
-            color: darkgreen
+            color: red;
+            text-align: center;
         }
         img {
             display: block;
@@ -23,17 +24,20 @@
         p{
             line-height: 1.6;
         }
+        a:visited {
+            color:white;
+        }
 
     </style>
 </head>
 <body>
-    <h1>The Lord of the Rings</h1>
+    <h1>Blade Runner</h1>
 
-    <p>LOTR is ana epic high-fantasy novel written by J.R.R. Tolkien.</p>
+    <p> <a href="https://en.wikipedia.org/wiki/Blade_Runner"> Blade Runner</a> is a noir sci-fi film, which is famous for having seven different cuts.</p>
 
-    <img src="the-lord-of-the-rings.jpg" alt="The Lord of the Rings">
+    <img src="Blade_Runner_(1982_poster).png" alt="Blade Runner">
 
-    <p>"Even the smalled person can change the course of the future." - Galadriel</p>
+    <p>"'More human than human' is our motto." - Tyrell</p>
     
 </body>
 </html>
