Assingment_2: Added Character List

--- a/Assignment_2/index.html
+++ b/Assignment_2/index.html
@@ -24,6 +24,9 @@
         p{
             line-height: 1.6;
         }
+        a{
+            color: yellow;
+        }
         a:visited {
             color:white;
         }
@@ -33,11 +36,20 @@
 <body>
     <h1>Blade Runner</h1>
 
-    <p> <a href="https://en.wikipedia.org/wiki/Blade_Runner"> Blade Runner</a> is a noir sci-fi film, which is famous for having seven different cuts.</p>
-
+    <p style="text-align: center;"> <a href="https://en.wikipedia.org/wiki/Blade_Runner"> Blade Runner</a> is a noir sci-fi film, which is famous for having seven different cuts.</p>
+    <h2>Characters</h2>
+    <ul>
+        <li>Rick Deckard</li>
+        <li>Rachael</li>
+        <li>Roy Batty</li>
+        <li>Pris Stratton</li>
+        <li>Zhora Salome</li>
+        <li>Eldon Tyrell</li>
+    </ul>
+    <p>"'More human than human' is our motto." - Eldon Tyrell</p>
     <img src="Blade_Runner_(1982_poster).png" alt="Blade Runner">
 
-    <p>"'More human than human' is our motto." - Tyrell</p>
+    
     
 </body>
 </html>
