In Class Assignment 3: Business Card information added

--- a/In Class Assignment 3/index.html
+++ b/In Class Assignment 3/index.html
@@ -3,9 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="author" content="Caleb">
-    <title>Document</title>
+    <title>Caleb Urbani Business Card</title>
 </head>
 <body>
-    
+    <div class="card">
+        <div class="name">
+            <h1>Caleb Urbani</h1>
+        </div>
+        <div class="job-title">
+            <h2>Computer Science Student</h2>
+        </div>
+        <div class="contact">
+            <h3>Phone: (555)555-5555</h3>
+            <h3>Email: curbani@atu.edu</h3>
+        </div>
+    </div>
 </body>
 </html>
