--- a/In Class Assignment 3/index.html
+++ b/In Class Assignment 3/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="author" content="Caleb">
     <title>Caleb Urbani Business Card</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div class="card">
