In Class Assignment 3: Added styling and flexbox

--- a/In Class Assignment 3/index.html
+++ b/In Class Assignment 3/index.html
@@ -12,11 +12,12 @@
             <h1>Caleb Urbani</h1>
         </div>
         <div class="job-title">
-            <h2>Computer Science Student</h2>
+            <h3>Computer Science Student</h3>
         </div>
+        <hr>
         <div class="contact">
-            <h3>Phone: (555)555-5555</h3>
-            <h3>Email: curbani@atu.edu</h3>
+            <h4>Phone: (555)555-5555</h4>
+            <h4>Email: <a href="mailto:curbani@atu.edu">curbani@atu.edu</a></h4>
         </div>
     </div>
 </body>
