Assignment 3: Added styling and added details about character

--- a/Assignment 3/index.html
+++ b/Assignment 3/index.html
@@ -3,9 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="author" content="Caleb">
-    <title>Document</title>
+    <title>Lieutenant Titus</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    
+    <div class="heading">
+        <img src="Titus.png" alt="Image of Titus">
+        <h1><span style="color:blue">Lieutenant</span> <span style="color: gold;"> (formerly Captain)</span> <span style="color: red;"> Titus</span></h1>
+    </div>
+    <div class="paragraph">
+        <p>Lieutenant Titus is the protagonist to the two video games <span class="title"> Warhammer 40,000: Space Marine</span> and <span class="title">Warhammer 40,000: Space Marine II</span>. Over the span of two games Titus has gone up against many foes, with the enemy factions that appear being Orks (<span class="title">Warhammer 40,000: Space Marine</span>), Tyranids (<span class="title">Warhammer 40,000: Space Marine II</span>), and Chaos Space Marines (<span class="title">Warhammer 40,000: Space Marine</span>, <span class="title">Warhammer 40,000: Space Marine II</span>).</p>
+    </div>
+    <div class="factions">
+        <button class="orks">Orks</button>
+        <button class="tyranids">Tyranids</button>
+        <button class="chaos">Chaos Space Marines</button>
+    </div>
 </body>
 </html>
