Assignment 4: Added HTML elements for the grid and grid items.

--- a/Assignment 4/dream-board.html
+++ b/Assignment 4/dream-board.html
@@ -6,6 +6,31 @@
     <title>Dream Board</title>
 </head>
 <body>
-    
+    <div class="grid-container">
+        <div class="item">
+            <h3>Graduate</h3>
+        </div>
+        <div class="header">
+            <h1>Dream Board</h1>
+        </div>
+        <div class="item">
+            <h3>Work at Nvidia</h3>
+        </div>
+        <div class="item">
+            <h3>Visit Japan</h3>
+        </div>
+        <div class="item">
+            <h3>Create a Video Game</h3>
+        </div>
+        <div class="item">
+            <h3>Learn a Second Language</h3>
+        </div>
+        <div class="item">
+            <h3>Hope the World Doesn't End</h3>
+        </div>
+        <div class="footer">
+            <h2>"Spiral out, keep going." - Maynard James Keenan, 2001</h2>
+        </div>
+    </div>
 </body>
 </html>
