Assignment 4: Added images

--- a/Assignment 4/dream-board.html
+++ b/Assignment 4/dream-board.html
@@ -7,26 +7,32 @@
 </head>
 <body>
     <div class="grid-container">
-        <div class="item">
-            <h3>Graduate</h3>
-        </div>
         <div class="header">
             <h1>Dream Board</h1>
         </div>
         <div class="item">
+            <h3>Graduate</h3>
+            <img src="images/graduate.png" alt="graduation">
+        </div>
+        <div class="item">
             <h3>Work at Nvidia</h3>
+            <img src="images/nvidia.png" alt="nvidia logo">
         </div>
         <div class="item">
             <h3>Visit Japan</h3>
+            <img src="images/kyoto.png" alt="kyoto">
         </div>
         <div class="item">
             <h3>Create a Video Game</h3>
+            <img src="images/game-creation.png" alt="code">
         </div>
         <div class="item">
             <h3>Learn a Second Language</h3>
+            <img src="images/language.png" alt="multiple languages">
         </div>
         <div class="item">
             <h3>Hope the World Doesn't End</h3>
+            <img src="images/world-end.png" alt="world ending">
         </div>
         <div class="footer">
             <h2>"Spiral out, keep going." - Maynard James Keenan, 2001</h2>
