Assignment 4: Added css styling to the grid layout.

--- a/Assignment 4/dream-board.html
+++ b/Assignment 4/dream-board.html
@@ -2,37 +2,57 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"
     <meta name="author" content="Caleb">
     <title>Dream Board</title>
+    <link rel="stylesheet" href="styles.css"
 </head>
 <body>
     <div class="grid-container">
         <div class="header">
             <h1>Dream Board</h1>
         </div>
-        <div class="item">
+        <div class="item" id="area1">
             <h3>Graduate</h3>
-            <img src="images/graduate.png" alt="graduation">
+            <img src="images/graduate.png" alt="graduation" id="graduation">
+            <div class="text-box">
+                <p>The closest goal is to graduate in May of 2025, and get my degree in Computer Science.</p>
+            </div>
         </div>
-        <div class="item">
+        <div class="item" id="area2">
             <h3>Work at Nvidia</h3>
-            <img src="images/nvidia.png" alt="nvidia logo">
+            <img src="images/nvidia.png" alt="nvidia logo" id="logo">
+            <div class="text-box">
+                <p>My dream job is to work at Nvidia and work on the development of their AI technologies.</p>
+            </div>
         </div>
-        <div class="item">
+        <div class="item" id="area3">
             <h3>Visit Japan</h3>
-            <img src="images/kyoto.png" alt="kyoto">
+            <img src="images/kyoto.png" alt="kyoto" id="japan">
+            <div class="text-box">
+                <p>I would like to someday visit Tokyo and Kyoto in Japan.</p>
+            </div>
         </div>
-        <div class="item">
+        <div class="item" id="area4">
             <h3>Create a Video Game</h3>
-            <img src="images/game-creation.png" alt="code">
+            <img src="images/game-creation.png" alt="code" id="game-creation">
+            <div class="text-box">
+                <p>Video games are the reason I ever got into computers, so I'd like to bring it full cirlce and make one.</p>
+            </div>
         </div>
-        <div class="item">
+        <div class="item" id="area5">
             <h3>Learn a Second Language</h3>
-            <img src="images/language.png" alt="multiple languages">
+            <img src="images/language.png" alt="multiple languages" id="language">
+            <div class="text-box">
+                <p>I'd like to learn another language (such as Finnish or Russian).</p>
+            </div>
         </div>
-        <div class="item">
+        <div class="item" id="area6">
             <h3>Hope the World Doesn't End</h3>
-            <img src="images/world-end.png" alt="world ending">
+            <img src="images/world-end.png" alt="world ending" id="apocalypse">
+            <div class="text-box">
+                <p>I hope the world doesn't end before I'm 55.</p>
+            </div>
         </div>
         <div class="footer">
             <h2>"Spiral out, keep going." - Maynard James Keenan, 2001</h2>
