--- a/Assignment 7/form.html
+++ b/Assignment 7/form.html
@@ -3,15 +3,49 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Form</title>
+    <link rel="stylesheet" href="styles.css">
+    <script src="script.js"></script>
 </head>
 <body>
     <form action="">
-        Name: <input type="text", id="name", placeholder="Enter your name..."> <br>
-        Email: <input type="email", id="email", placeholder="Enter your email..."> <br>
-        Password: <input type="pasword", id="password", placeholder="Enter your password..."> <br>
-        Age: <input type="number", id="age", placeholder="Enter your age..."> <br>
-        Gender: <input type="radio", id="gender"> <br>
+        <div class="text-input">
+            <label for="name">Name:</label>
+            <input type="text", id="name", placeholder="Enter your name..."> <br>
+            <label for="email">Email:</label>
+            <input type="email", id="email", placeholder="Enter your email..."> <br>
+            <label for="password">Password:</label>
+            <input type="pasword", id="password", placeholder="Enter your password..."> <br>
+            <label for="age">Age:</label>
+            <input type="number", id="age", placeholder="Enter your age..."> <br>
+        </div>
+        <label>Gender:</label> 
+        <div class="radio-group">
+            <input type="radio" id="male" name="gender" value="Male">
+            <label for="male">Male</label>
+            <input type="radio" id="female" name="gender" value="Female">
+            <label for="female">Female</label>
+            <input type="radio" id="other" name="gender" value="Other">
+            <label for="other">Other</label>
+        </div>
+        <label for="country">Country:</label>
+        <select id="country" name="country">
+            <option value="">Select a country</option>
+            <option value="United States">United States</option>
+            <option value="United Kingdom">United Kingdom</option>
+            <option value="Canada">Canada</option>
+            <option value="France">France</option>
+            <option value="Russia">Russia</option>
+            <option value="Korea">Korea</option>
+            <option value="China">China</option>
+        </select> <br>
+        <div class="terms-box">
+            <input type="checkbox" id="terms" name="terms">
+            <label for="terms">I agree to the Terms and Conditions</label>
+        </div>
+        <input type="button" type="submit" value="Submit" onclick="getFormData(this.form);">
+        <div id="output"></div>
+
     </form>
 </body>
 </html>
